- Fixed bug #47254 (Wrong Reflection for extends class)