ext/reflection/tests/002.phpt
@@ -50,14 +50,14 @@ var_dump($r->bar);
 ===DONE===
 --EXPECTF--
 ReflectionMethodEx::__construct
-unicode(18) "ReflectionMethodEx"
-unicode(7) "getName"
-unicode(3) "xyz"
+%unicode|string%(26) "ReflectionFunctionAbstract"
+%unicode|string%(7) "getName"
+%unicode|string%(3) "xyz"
 NULL
 Cannot set read-only property ReflectionMethodEx::$class
 Cannot set read-only property ReflectionMethodEx::$name
-unicode(18) "ReflectionMethodEx"
-unicode(7) "getName"
-unicode(3) "bar"
-unicode(3) "baz"
+%unicode|string%(26) "ReflectionFunctionAbstract"
+%unicode|string%(7) "getName"
+%unicode|string%(3) "bar"
+%unicode|string%(3) "baz"
 ===DONE===
