ext/reflection/tests/ReflectionClass_getMethods_001.phpt
@@ -40,101 +40,101 @@ Reflecting on class pubf:
 array(2) {
   [0]=>
   &object(ReflectionMethod)#%d (2) {
-    [u"name"]=>
-    unicode(1) "f"
-    [u"class"]=>
-    unicode(4) "pubf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "f"
+    [%u|b%"class"]=>
+    %unicode|string%(4) "pubf"
   }
   [1]=>
   &object(ReflectionMethod)#%d (2) {
-    [u"name"]=>
-    unicode(1) "s"
-    [u"class"]=>
-    unicode(4) "pubf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "s"
+    [%u|b%"class"]=>
+    %unicode|string%(4) "pubf"
   }
 }
 Reflecting on class subpubf: 
 array(2) {
   [0]=>
   &object(ReflectionMethod)#%d (2) {
-    [u"name"]=>
-    unicode(1) "f"
-    [u"class"]=>
-    unicode(7) "subpubf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "f"
+    [%u|b%"class"]=>
+    %unicode|string%(4) "pubf"
   }
   [1]=>
   &object(ReflectionMethod)#%d (2) {
-    [u"name"]=>
-    unicode(1) "s"
-    [u"class"]=>
-    unicode(7) "subpubf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "s"
+    [%u|b%"class"]=>
+    %unicode|string%(4) "pubf"
   }
 }
 Reflecting on class protf: 
 array(2) {
   [0]=>
   &object(ReflectionMethod)#%d (2) {
-    [u"name"]=>
-    unicode(1) "f"
-    [u"class"]=>
-    unicode(5) "protf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "f"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "protf"
   }
   [1]=>
   &object(ReflectionMethod)#%d (2) {
-    [u"name"]=>
-    unicode(1) "s"
-    [u"class"]=>
-    unicode(5) "protf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "s"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "protf"
   }
 }
 Reflecting on class subprotf: 
 array(2) {
   [0]=>
   &object(ReflectionMethod)#%d (2) {
-    [u"name"]=>
-    unicode(1) "f"
-    [u"class"]=>
-    unicode(8) "subprotf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "f"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "protf"
   }
   [1]=>
   &object(ReflectionMethod)#%d (2) {
-    [u"name"]=>
-    unicode(1) "s"
-    [u"class"]=>
-    unicode(8) "subprotf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "s"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "protf"
   }
 }
 Reflecting on class privf: 
 array(2) {
   [0]=>
   &object(ReflectionMethod)#%d (2) {
-    [u"name"]=>
-    unicode(1) "f"
-    [u"class"]=>
-    unicode(5) "privf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "f"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "privf"
   }
   [1]=>
   &object(ReflectionMethod)#%d (2) {
-    [u"name"]=>
-    unicode(1) "s"
-    [u"class"]=>
-    unicode(5) "privf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "s"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "privf"
   }
 }
 Reflecting on class subprivf: 
 array(2) {
   [0]=>
   &object(ReflectionMethod)#%d (2) {
-    [u"name"]=>
-    unicode(1) "f"
-    [u"class"]=>
-    unicode(8) "subprivf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "f"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "privf"
   }
   [1]=>
   &object(ReflectionMethod)#%d (2) {
-    [u"name"]=>
-    unicode(1) "s"
-    [u"class"]=>
-    unicode(8) "subprivf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "s"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "privf"
   }
 }
