ext/reflection/tests/ReflectionClass_getProperties_001.phpt
@@ -40,85 +40,85 @@ Reflecting on class pubf:
 array(2) {
   [0]=>
   &object(ReflectionProperty)#%d (2) {
-    [u"name"]=>
-    unicode(1) "a"
-    [u"class"]=>
-    unicode(4) "pubf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "a"
+    [%u|b%"class"]=>
+    %unicode|string%(4) "pubf"
   }
   [1]=>
   &object(ReflectionProperty)#%d (2) {
-    [u"name"]=>
-    unicode(1) "s"
-    [u"class"]=>
-    unicode(4) "pubf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "s"
+    [%u|b%"class"]=>
+    %unicode|string%(4) "pubf"
   }
 }
 Reflecting on class subpubf: 
 array(2) {
   [0]=>
   &object(ReflectionProperty)#%d (2) {
-    [u"name"]=>
-    unicode(1) "a"
-    [u"class"]=>
-    unicode(7) "subpubf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "a"
+    [%u|b%"class"]=>
+    %unicode|string%(4) "pubf"
   }
   [1]=>
   &object(ReflectionProperty)#%d (2) {
-    [u"name"]=>
-    unicode(1) "s"
-    [u"class"]=>
-    unicode(7) "subpubf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "s"
+    [%u|b%"class"]=>
+    %unicode|string%(4) "pubf"
   }
 }
 Reflecting on class protf: 
 array(2) {
   [0]=>
   &object(ReflectionProperty)#%d (2) {
-    [u"name"]=>
-    unicode(1) "a"
-    [u"class"]=>
-    unicode(5) "protf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "a"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "protf"
   }
   [1]=>
   &object(ReflectionProperty)#%d (2) {
-    [u"name"]=>
-    unicode(1) "s"
-    [u"class"]=>
-    unicode(5) "protf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "s"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "protf"
   }
 }
 Reflecting on class subprotf: 
 array(2) {
   [0]=>
   &object(ReflectionProperty)#%d (2) {
-    [u"name"]=>
-    unicode(1) "a"
-    [u"class"]=>
-    unicode(8) "subprotf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "a"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "protf"
   }
   [1]=>
   &object(ReflectionProperty)#%d (2) {
-    [u"name"]=>
-    unicode(1) "s"
-    [u"class"]=>
-    unicode(8) "subprotf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "s"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "protf"
   }
 }
 Reflecting on class privf: 
 array(2) {
   [0]=>
   &object(ReflectionProperty)#%d (2) {
-    [u"name"]=>
-    unicode(1) "a"
-    [u"class"]=>
-    unicode(5) "privf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "a"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "privf"
   }
   [1]=>
   &object(ReflectionProperty)#%d (2) {
-    [u"name"]=>
-    unicode(1) "s"
-    [u"class"]=>
-    unicode(5) "privf"
+    [%u|b%"name"]=>
+    %unicode|string%(1) "s"
+    [%u|b%"class"]=>
+    %unicode|string%(5) "privf"
   }
 }
 Reflecting on class subprivf: 
