ext/reflection/tests/ReflectionClass_getProperty_003.phpt
@@ -97,146 +97,146 @@ showInfo("doesntexist::doesntExist");
 --EXPECTF--
 --- (Reflecting on pubA) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(4) "pubA"
-  [u"class"]=>
-  unicode(1) "C"
+  [%u|b%"name"]=>
+  %unicode|string%(4) "pubA"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "A"
 }
-unicode(9) "pubA in A"
+%unicode|string%(9) "pubA in A"
 --- (Reflecting on protA) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(5) "protA"
-  [u"class"]=>
-  unicode(1) "C"
+  [%u|b%"name"]=>
+  %unicode|string%(5) "protA"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "A"
 }
 Cannot access non-public member C::protA
 --- (Reflecting on privA) ---
 Property privA does not exist
 --- (Reflecting on pubB) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(4) "pubB"
-  [u"class"]=>
-  unicode(1) "C"
+  [%u|b%"name"]=>
+  %unicode|string%(4) "pubB"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "B"
 }
-unicode(9) "pubB in B"
+%unicode|string%(9) "pubB in B"
 --- (Reflecting on protB) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(5) "protB"
-  [u"class"]=>
-  unicode(1) "C"
+  [%u|b%"name"]=>
+  %unicode|string%(5) "protB"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "B"
 }
 Cannot access non-public member C::protB
 --- (Reflecting on privB) ---
 Property privB does not exist
 --- (Reflecting on pubC) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(4) "pubC"
-  [u"class"]=>
-  unicode(1) "C"
+  [%u|b%"name"]=>
+  %unicode|string%(4) "pubC"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "C"
 }
-unicode(9) "pubC in C"
+%unicode|string%(9) "pubC in C"
 --- (Reflecting on protC) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(5) "protC"
-  [u"class"]=>
-  unicode(1) "C"
+  [%u|b%"name"]=>
+  %unicode|string%(5) "protC"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "C"
 }
 Cannot access non-public member C::protC
 --- (Reflecting on privC) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(5) "privC"
-  [u"class"]=>
-  unicode(1) "C"
+  [%u|b%"name"]=>
+  %unicode|string%(5) "privC"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "C"
 }
 Cannot access non-public member C::privC
 --- (Reflecting on doesntExist) ---
 Property doesntExist does not exist
 --- (Reflecting on A::pubC) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(4) "pubC"
-  [u"class"]=>
-  unicode(1) "A"
+  [%u|b%"name"]=>
+  %unicode|string%(4) "pubC"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "A"
 }
-unicode(9) "pubC in A"
+%unicode|string%(9) "pubC in A"
 --- (Reflecting on A::protC) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(5) "protC"
-  [u"class"]=>
-  unicode(1) "A"
+  [%u|b%"name"]=>
+  %unicode|string%(5) "protC"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "A"
 }
 Cannot access non-public member A::protC
 --- (Reflecting on A::privC) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(5) "privC"
-  [u"class"]=>
-  unicode(1) "A"
+  [%u|b%"name"]=>
+  %unicode|string%(5) "privC"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "A"
 }
 Cannot access non-public member A::privC
 --- (Reflecting on B::pubC) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(4) "pubC"
-  [u"class"]=>
-  unicode(1) "B"
+  [%u|b%"name"]=>
+  %unicode|string%(4) "pubC"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "B"
 }
-unicode(9) "pubC in B"
+%unicode|string%(9) "pubC in B"
 --- (Reflecting on B::protC) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(5) "protC"
-  [u"class"]=>
-  unicode(1) "B"
+  [%u|b%"name"]=>
+  %unicode|string%(5) "protC"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "B"
 }
 Cannot access non-public member B::protC
 --- (Reflecting on B::privC) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(5) "privC"
-  [u"class"]=>
-  unicode(1) "B"
+  [%u|b%"name"]=>
+  %unicode|string%(5) "privC"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "B"
 }
 Cannot access non-public member B::privC
 --- (Reflecting on c::pubC) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(4) "pubC"
-  [u"class"]=>
-  unicode(1) "C"
+  [%u|b%"name"]=>
+  %unicode|string%(4) "pubC"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "C"
 }
-unicode(9) "pubC in C"
+%unicode|string%(9) "pubC in C"
 --- (Reflecting on c::PUBC) ---
 Property PUBC does not exist
 --- (Reflecting on C::pubC) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(4) "pubC"
-  [u"class"]=>
-  unicode(1) "C"
+  [%u|b%"name"]=>
+  %unicode|string%(4) "pubC"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "C"
 }
-unicode(9) "pubC in C"
+%unicode|string%(9) "pubC in C"
 --- (Reflecting on C::protC) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(5) "protC"
-  [u"class"]=>
-  unicode(1) "C"
+  [%u|b%"name"]=>
+  %unicode|string%(5) "protC"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "C"
 }
 Cannot access non-public member C::protC
 --- (Reflecting on C::privC) ---
 object(ReflectionProperty)#%d (2) {
-  [u"name"]=>
-  unicode(5) "privC"
-  [u"class"]=>
-  unicode(1) "C"
+  [%u|b%"name"]=>
+  %unicode|string%(5) "privC"
+  [%u|b%"class"]=>
+  %unicode|string%(1) "C"
 }
 Cannot access non-public member C::privC
 --- (Reflecting on X::pubC) ---
